вынес slider-switch в отдельный файл

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </p>
           </article>
         </div>
-        <div class="slider__switch  slider__switсh--app-review">
+        <div class="slider-switch  reviews__slider-switсh">
           <i></i>
           <i class="slider__switch--active"></i>
           <i></i>
@@ -116,7 +116,7 @@
           </table>
 
         </div>
-      <div class="slider__switch  slider__switсh--rate-review">
+      <div class="slider-switch  shop__slider-switch">
         <i></i>
         <i class="slider__switch--active"></i>
         <i></i>
