сделал блок контакты с картой

--- a/index.html
+++ b/index.html
@@ -7,9 +7,52 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="top-menu">
-      <a class="top-menu__logo" href="#">Pink</a>
-      <a class="menu-btn" href="#">menu</a>
+    <header class="main-header">
+
+      <div class="top-menu">
+      <a class="top-menu__logo" href="#">
+        <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
+            <g>
+              <path fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064
+                c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428
+                c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z"/>
+              <path fill="#FFFFFF" d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283
+                c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z"/>
+              <path fill="#FFFFFF" d="M30.87,1.32c0-0.676,0.579-1.256,1.256-1.256h0.354c0.58,0,0.934,0.29,1.288,0.74l13.684,17.45V1.256
+                C47.451,0.58,47.998,0,48.707,0c0.676,0,1.223,0.58,1.223,1.256v20.348c0,0.676-0.482,1.191-1.158,1.191h-0.129
+                c-0.548,0-0.934-0.322-1.32-0.772L33.349,4.153v17.45c0,0.676-0.547,1.256-1.255,1.256c-0.677,0-1.224-0.58-1.224-1.256V1.32z"/>
+              <path fill="#FFFFFF" d="M56.3,1.288C56.3,0.58,56.879,0,57.556,0c0.708,0,1.287,0.58,1.287,1.288v12.331L71.689,0.451
+                C71.979,0.193,72.269,0,72.688,0c0.676,0,1.224,0.612,1.224,1.256c0,0.354-0.161,0.644-0.419,0.901l-7.984,7.92l8.564,10.561
+                c0.225,0.29,0.354,0.547,0.354,0.934c0,0.676-0.579,1.288-1.287,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.403-10.463l-4.862,4.861
+                v4.894c0,0.708-0.579,1.288-1.287,1.288c-0.677,0-1.256-0.58-1.256-1.288V1.288z"/>
+            </g>
+          </svg>
+      </a>
+      <a class="top-menu__btn" href="#">
+        <svg class="top-menu__btn--open" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+               width="49.945px" height="24.007px" viewBox="0 0 49.945 24.007" enable-background="new 0 0 49.945 24.007" xml:space="preserve">
+            <g id="miu">
+              <g id="editor_list_view_hambuger_menu_glyph">
+                <g>
+                  <path id="path-1" fill="#231F20" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.138,1.01h47.671
+                    c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98
+                    c0,0.557,0.494,1.01,1.138,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z
+                     M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.138,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01
+                    v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
+                </g>
+                <g>
+                  <path id="path-1_1_" fill="#231F20" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.138,1.01h47.671
+                    c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98
+                    c0,0.557,0.494,1.01,1.138,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z
+                     M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.138,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01
+                    v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
+                </g>
+              </g>
+            </g>
+          </svg>
+      </a>
+
       <nav class="main-menu">
         <ul>
           <li>
@@ -26,26 +69,26 @@
           </li>
         </ul>
       </nav>
-      <section class="intro">
-        <h1>Взгляните на жизнь иначе!</h1>
-        <img src="#" alt="placehold" width="50" height="50">
-      </section>
 
     </div>
+      <h1 class="main-header__intro">Взгляните на жизнь иначе!</h1>
+      <img src="img/iphone-hand-mobile.png" alt="placehold" width="258" height="286">
 
-
-    <section class="applications">
-      <a class="applications__btn-buy" href="#">Скачать приложение</a>
-      <div class="applications__icons">
-        <img src="#" alt="placehold" width="50" height="50">
-        <img src="#" alt="placehold" width="50" height="50">
-        <img src="#" alt="placehold" width="50" height="50">
-      </div>
-      <div class="applications__text">Доступно для iPhone, iPad, Android,
+      <section class="applications  main-header__applications">
+        <a class="applications__btn-buy" href="#">Скачать приложение</a>
+        <div class="applications__icons">
+          <img src="img/apple-logo.svg" alt="placehold" width="47" height="57">
+          <img src="img/android-logo.svg" alt="placehold" width="43" height="47">
+          <img src="img/microsoft-logo.svg" alt="placehold" width="44" height="42">
+        </div>
+        <div class="applications__text">Доступно для iPhone, iPad, Android,
           Windows Phone, OS X, Windows 8
-      </div>
+        </div>
+      </section>
+    </header>
 
-    </section>
+
+
     <section class="info">
       <h2 class="info__item-single">Устали от серости мегаполиса?</h2>
       <h2 class="info__item-single">Нам есть, что вам предложить!</h2>
@@ -131,8 +174,11 @@
       <p class="contacts__item">mail@htmlacademy.ru</p>
       <h2 class="contacts__item-header">Приезжайте в гости:</h2>
       <p class="contacts__item">ул. Большая Конюшенная, 19/8</p>
-      <div class="map">
-        <img src="#" alt="placehold" width="50" height="50">
+      <div class="contacts__map">
+        <img src="img/triangle-white-footer.svg" alt="placehold">
+        <div>
+          <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=5gwinW-ZUjU8ZKu_F5Zh2OKnOkDtBhIl&width=100%&height=200px&lang=ru_RU&sourceType=constructor"></script>
+        </div>
       </div>
     </section>
 
